--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,36 +2,36 @@ g_pubMainMenuObject :
   - name : pubGrid
     git_url : https://github.com/ytechinfo/pub
     api_url :
-    demo_url :
+    demo_url : /demo/samples/pubGrid.html
     desc :  대용량 데이터용 그리드
   - name : autocomplete
     git_url : https://github.com/ytechinfo/pub
     api_url :
-    demo_url :
+    demo_url : /demo/samples/pubAutocomplete.html
     desc : 자동완성 
   - name : calendar
     git_url : https://github.com/ytechinfo/pub
     api_url :
-    demo_url :
+    demo_url : /demo/samples/pubCalendar.html
     desc : 당력
   - name : context
     git_url : https://github.com/ytechinfo/pub
     api_url :
-    demo_url :
+    demo_url : /demo/samples/pubGrid.html
     desc : 컨텍스트 메뉴
   - name : multiselect
     git_url : https://github.com/ytechinfo/pub
     api_url :
-    demo_url :
+    demo_url : /demo/samples/pubGrid.html
     desc : multi select 모듈
   - name : tab
     git_url : https://github.com/ytechinfo/pub
     api_url :
-    demo_url :
+    demo_url : /demo/samples/pubTab.html
     desc :  탭 
   - name : tree
     git_url : https://github.com/ytechinfo/pub
     api_url :
-    demo_url :
+    demo_url : /demo/samples/pubTree.html
     desc :  java script truee
   
